k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: techsolutions-deployment
  namespace: default
  labels:
    app: techsolutions

spec:
  replicas: 3

  selector:
    matchLabels:
      app: techsolutions

  template:
    metadata:
      labels:
        app: techsolutions

    spec:
      containers:
        - name: techsolutions
          image: darshanat15/techsolutions-app:v1
          imagePullPolicy: Always

          ports:
            - containerPort: 80

          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: techsolutions-service
  namespace: default
  labels:
    app: techsolutions

spec:
  type: ClusterIP

  selector:
    app: techsolutions

  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
